-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 12.0.1
-
None
-
-
09ebc4151 (master), 6f56310e3 (master)
Please see exchange at the forums here :
- resulted in
-
QTCREATORBUG-31515 Cannot use widget designer if any source file is open in a separate window
-
- Closed
-
| For Gerrit Dashboard: QTCREATORBUG-30408 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 557574,3 | EditorManager: Keep track of current view | master | qt-creator/qt-creator | Status: MERGED | +2 | 0 |
| 557576,4 | EditorManager: Make sure the current view is visible | master | qt-creator/qt-creator | Status: MERGED | +2 | +1 |